Mostly done cleaning up day 20, may come back later